[package]
name = "troswer"
version = "0.1.0"
authors = ["<cowboy8625>", "<adam>"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
crossterm = "0.26.1"
tui = { package = "ratatui", version = "0.21.0" }

[[bin]]
name = "trowser"
path = "src/main.rs"

[lib]
name = "trowser"
path = "src/lib.rs"
